--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build:portfolio": "webpack --config webpack.build.portfolio.js --mode production",
-    "dev:portfolio": "webpack-dev-server --open --mode development --config webpack.config.portfolio.js --progress"
+    "dev:portfolio": "webpack-dev-server --open --mode development --config webpack.dev.portfolio.js --progress"
   },
   "keywords": [],
   "author": "",
@@ -23,8 +23,10 @@
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "pug-html-loader": "^1.1.5",
+    "sass": "^1.32.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "style-resources-loader": "^1.4.1",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "url-loader": "^3.0.0",
@@ -32,5 +34,7 @@
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^5.0.0-beta1"
+  }
 }
